--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react": "^18.3.18",
+    "@types/prop-types": "^15.7.14",
+    "csstype": "^3.1.3",
+    "typescript": "^4.9.5",
     "@emailjs/browser": "^3.11.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
